kubernetes/apps/my-software-showcase/uzeit-de/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-software-showcase
  labels:
    name: my-software-showcase
